--- a/events.html
+++ b/events.html
@@ -63,7 +63,6 @@
                         </ul>
                     </li>
                     <li><a href="events.html">WISE Events</a></li>
-                    <!-- <li><a href="opportunities.html">Opportunities</a></li> -->
                     <li class="drop-down"><a href="#">Initiatives</a>
                         <ul>
                             <li><a href="community-outreach.html">Community Outreach</a></li>
@@ -72,8 +71,7 @@
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://conference.wiseuoft.org/">Conference</a></li>
-                    <!-- <li><a href="summer-camp.html">WISE Summer Camp</a></li> -->
+                    <!-- <li><a href="https://conference.wiseuoft.org/">Conference</a></li> -->
                     <li><a href="opportunities.html">Opportunities</a></li>
                     <li class="drop-down"><a href="#">Stories of WISE</a>
                         <ul>
@@ -107,7 +105,7 @@
                 
                 <div class="row flex-items-xs-middle flex-items-xs-center"> 
                     
-                    <div class="col-xs-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="0.5s" data-wow-duration="1.4s">
+                    <div class="col-xs-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
                         <div class="card">
                             <div class="card-header">
                                 <h3>October 17, 2020</h3>
@@ -126,7 +124,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-delay="1.0s" data-wow-duration="1.4s">
+                    <div class="col-xs-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-delay="0.5s" data-wow-duration="1.4s">
                         <div class="card">
                             <div class="card-header">
                                 <!-- <h3>March 8, 2020</h3> -->
@@ -145,7 +143,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-delay="1.0s" data-wow-duration="1.4s">
+                    <div class="col-xs-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-delay="0.5s" data-wow-duration="1.4s">
                         <div class="card">
                             <div class="card-header">
                                 <!-- <h3>March 8, 2020</h3> -->
