--- a/industry-mentorship.html
+++ b/industry-mentorship.html
@@ -64,7 +64,6 @@
                         </ul>
                     </li>
                     <li><a href="events.html">WISE Events</a></li>
-                    <!-- <li><a href="opportunities.html">Opportunities</a></li> -->
                     <li class="drop-down"><a href="#">Initiatives</a>
                         <ul>
                             <li><a href="community-outreach.html">Community Outreach</a></li>
@@ -73,8 +72,7 @@
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://conference.wiseuoft.org/">Conference</a></li>
-                    <!-- <li><a href="summer-camp.html">WISE Summer Camp</a></li> -->
+                    <!-- <li><a href="https://conference.wiseuoft.org/">Conference</a></li> -->
                     <li><a href="opportunities.html">Opportunities</a></li>
                     <li class="drop-down"><a href="#">Stories of WISE</a>
                         <ul>
