update about us paragraph

--- a/index.html
+++ b/index.html
@@ -121,14 +121,15 @@
                     <div class="col-lg-7 col-md-6">
                         <div class="about-content">
                         <h2>About Us</h2>
-                        <p>The Women in Science and Engineering – University of Toronto (WISE U of T) Chapter was established in 1999 to 
-                            support and empower women in STEM fields and help them achieve their full potential as future engineers, entrepreneurs, scientists,
-                            and leaders. The organization has since developed into one of the largest and highly regarded campus organizations with
-                            over 1500 members.</p>
-                        <p>We aim to empower women by building necessary leadership skills and confidence to be successful in the various STEM
-                            fields. Through our initiatives, we hope to inspire and encourage women to pursue STEM programs at a 
-                            post-secondary level and broaden students' horizons, so that they can also make positive impact in their 
-                            professional career!</p>
+                        <p>The Women in Science and Engineering – University of Toronto (WISE U of T) Chapter was established in 1999 
+                            to support and empower all womxn in STEM fields and help them achieve their full potential as future engineers, 
+                            entrepreneurs, scientists, and leaders. The organization has since developed into one of the largest and highly 
+                            regarded campus organizations with over 1500 members
+                            </p>
+                        <p>We aim to empower all women and allies as leaders in championing gender equity, countering biases, and building 
+                            confidence in all STEM fields. Through our initiatives, we hope to inspire and encourage womxn to pursue STEM programs 
+                            at a post-secondary level and broaden students' horizons, so that they can also make a positive impact in their professional 
+                            career!</p>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6">
