--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             entrepreneurs, scientists, and leaders. The organization has since developed into one of the largest and highly 
                             regarded campus organizations with over 1500 members
                             </p>
-                        <p>We aim to empower all women and allies as leaders in championing gender equity, countering biases, and building 
+                        <p>We aim to empower all womxn and allies as leaders in championing gender equity, countering biases, and building 
                             confidence in all STEM fields. Through our initiatives, we hope to inspire and encourage womxn to pursue STEM programs 
                             at a post-secondary level and broaden students' horizons, so that they can also make a positive impact in their professional 
                             career!</p>
