Added conference website back

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
-                    <!-- <li><a href="https://conference.wiseuoft.org/">Conference</a></li> -->
+                    <li><a href="https://conference.wiseuoft.org/">Conference</a></li>
                     <li><a href="opportunities.html">Opportunities</a></li>
                     <li class="drop-down"><a href="#">Stories of WISE</a>
                         <ul>
@@ -124,8 +124,7 @@
                         <p>The Women in Science and Engineering – University of Toronto (WISE U of T) Chapter was established in 1999 
                             to support and empower all womxn in STEM fields and help them achieve their full potential as future engineers, 
                             entrepreneurs, scientists, and leaders. The organization has since developed into one of the largest and highly 
-                            regarded campus organizations with over 1500 members
-                            </p>
+                            regarded campus organizations with over 1500 members.</p>
                         <p>We aim to empower all womxn and allies as leaders in championing gender equity, countering biases, and building 
                             confidence in all STEM fields. Through our initiatives, we hope to inspire and encourage womxn to pursue STEM programs 
                             at a post-secondary level and broaden students' horizons, so that they can also make a positive impact in their professional 
