--- a/old/summer-camp.html
+++ b/old/summer-camp.html
@@ -84,7 +84,7 @@
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
-                    <!-- <li><a href="https://conference.wiseuoft.org/">Conference</a></li> -->
+                    <li><a href="https://conference.wiseuoft.org/">Conference</a></li>
                     <li><a href="summer-camp.html">WISE Summer Camp</a></li>
                     <li><a href="opportunities.html">Opportunities</a></li>
                     <li class="drop-down"><a href="#">Stories of WISE</a>
