--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -72,7 +72,7 @@
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
-                    <!-- <li><a href="https://conference.wiseuoft.org/">Conference</a></li> -->
+                    <li><a href="https://conference.wiseuoft.org/">Conference</a></li>
                     <li><a href="opportunities.html">Opportunities</a></li>
                     <li class="drop-down"><a href="#">Stories of WISE</a>
                         <ul>
