--- a/old/conference.html
+++ b/old/conference.html
@@ -72,7 +72,7 @@
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
-                    <!-- <li><a href="https://conference.wiseuoft.org/">Conference</a></li> -->
+                    <li><a href="https://conference.wiseuoft.org/">Conference</a></li>
                     <li class="drop-down"><a href="#">Stories of WISE</a>
                         <ul>
                             <li><a href="https://www.instagram.com/storiesofwise/" target="_blank">Instagram</a></li>
