--- a/index.html
+++ b/index.html
@@ -122,13 +122,10 @@
                         <div class="about-content">
                         <h2>About Us</h2>
                         <p>The Women in Science and Engineering – University of Toronto (WISE U of T) Chapter was established in 1999 
-                            to support and empower all womxn in STEM fields and help them achieve their full potential as future engineers, 
+                            to support and empower all womenn in STEM fields and help them achieve their full potential as future engineers, 
                             entrepreneurs, scientists, and leaders. The organization has since developed into one of the largest and highly 
                             regarded campus organizations with over 1500 members.</p>
-                        <p>We aim to empower all womxn and allies as leaders in championing gender equity, countering biases, and building 
-                            confidence in all STEM fields. Through our initiatives, we hope to inspire and encourage womxn to pursue STEM programs 
-                            at a post-secondary level and broaden students' horizons, so that they can also make a positive impact in their professional 
-                            career!</p>
+                        <p>We aim to empower marginalized groups in STEM, including cis and trans women, and non-binary folks comfortable in spaces that center women! Our goal is to highlight diverse and inspiring leaders across STEM fields, to promote a supportive and inclusive environment that helps people achieve their full potential as future engineers, entrepreneurs, and scientists</p>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6">
