Update team photos

--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -154,21 +154,24 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team/pearse.jpg" class="img-fluid" alt="">
+                                <img src="img/team-2021/Dhana Abdo 2.jpg" class="img-fluid"
+                                onmouseover="this.src='img/team-2021/Dhana Abdo 1.jpg';"
+                                onmouseout="this.src='img/team-2021/Dhana Abdo 2.jpg';">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Pearse O'Malley</h4>
+                                        <h4>Dhana Abdo</h4>
                                         <span>High School Mentorship Director</span>
-                                        <h5>Health and Disease, Human Biology</h5>
+                                        <h5>Engineering Science</h5>
                                         <div class="social">
-                                            <a href="mailto:pearse.omalley@wiseuoft.org"><i class="fa fa-envelope"></i></a>
+                                            <a href="mailto:hs.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                            <a href="https://www.linkedin.com/in/dhana-abdo/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                             
-                        <div class="col-lg-3 col-md-5 wow fadeInUp">
+                        <!-- <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
                                 <img src="img/team/randa.jpg" class="img-fluid" alt="">
                                 <div class="member-info">
@@ -182,7 +185,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
 
