--- a/pd.html
+++ b/pd.html
@@ -134,15 +134,17 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/favicon.jpg" class="img-fluid" alt="">
+                                <img src="img/team/Christina Wong 1.jpeg" class="img-fluid"
+                                onmouseover="this.src='img/team/Christina Wong 2.jpeg';"
+                                onmouseout="this.src='img/team/Christina Wong 1.jpeg';">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Sandy Dai</h4>
+                                        <h4>Christina Wong</h4>
                                         <span>VP Professional Development</span>
-                                        <h5>Industrial Engineering</h5>
+                                        <h5>Laboratory Medicine and Pathobiology</h5>
                                         <div class="social">
-                                            <a href="mailto:vp.pd@wiseuoft.org"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/sandy-dai/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="mailto:vp.pd@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                            <a href="https://www.linkedin.com/in/christina-wong-25000b1b7/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
