--- a/index.html
+++ b/index.html
@@ -54,15 +54,21 @@
 
 <body>
     <!--=====Header======-->
+
     <header id="header">
-
-        <div id="topbar"></div>
-
+        <div class="alert alert-warning alert-dismissible fade show" style="z-index: -1; position: relative;" role="alert">
+            We’ve changed our email addresses. Please reach out to <strong>president@wise.skule.ca</strong> for more information.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div id="topbar">
+        </div>
         <div class="container">
             <div class="logo float-left">
-                <a href="index.html" class="scrollto"><img src="img/WISE-LOGO.png" alt="" class="img-fluid"></a>
+                <a href="index.html" class="scrollto">
+                    <img src="img/WISE-LOGO.png" alt="" class="img-fluid"></a>
             </div>
-
             <!-- Nav Bar -->
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
