Team picture and job

--- a/our-team.html
+++ b/our-team.html
@@ -306,6 +306,77 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-3 col-md-5 ">
+                    <div class="member">
+                        <img src="img/team-2021/Ida Marchese 1.jpg" class="img-fluid"
+                        onmouseover="this.src='img/team-2021/Ida Marchese 2.jpg';"
+                        onmouseout="this.src='img/team-2021/Ida Marchese 1.jpg';">
+                        <div class="member-info">
+                            <div class="member-info-content">
+                                <h4>Ida Marchese</h4>
+                                <span>Photographer & Videographer</span>
+                                <h5>Health Sciences, Psychology and Biomedical Communications</h5>
+                                <div class="social">
+                                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                    <a href="https://www.linkedin.com/in/ida-marchese-560715175/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-5 ">
+                    <div class="member">
+                        <img src="img/favicon.jpg" class="img-fluid" alt="">
+                        <div class="member-info">
+                            <div class="member-info-content">
+                                <h4>Elizabeth Tyra Sumual</h4>
+                                <span>First Year Marketing Associate</span>
+                                <h5>TrackOne Engineering</h5>
+                                <div class="social">
+                                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                    <a href="https://www.linkedin.com/in/elizabeth-tyra-sumual-b5a02b214/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-5 ">
+                    <div class="member">
+                        <img src="img/favicon.jpg" class="img-fluid" alt="">
+                        <div class="member-info">
+                            <div class="member-info-content">
+                                <h4>Nicole Lagace</h4>
+                                <span>Stories of WISE Editor</span>
+                                <h5>Pharmaceutical Sciences</h5>
+                                <div class="social">
+                                    <a href="mailto:editor@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-5 ">
+                    <div class="member">
+                        <img src="img/team-2021/Maria V 1.jpg" class="img-fluid"
+                        onmouseover="this.src='img/team-2021/Maria V 2.jpg';"
+                        onmouseout="this.src='img/team-2021/Maria V 1.jpg';">
+                        <div class="member-info">
+                            <div class="member-info-content">
+                                <h4>Maria Vetrici</h4>
+                                <span>Graphic Design Associate</span>
+                                <h5>Mathematics</h5>
+                                <div class="social">
+                                    <a href="mailto:webmaster@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <!-- Marketing -->
 
