--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="col-sm-4">
                         <div class="footer-links">
                             <h4>Email</h4>
-                            <p>info@wiseuoft.org</p>
+                            <p>president@wise.skule.ca</p>
                         </div>
                     </div>
 
