gitignore and round 1 edits

--- a/our-team.html
+++ b/our-team.html
@@ -633,7 +633,9 @@
 
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#taliay">
-                        <img src="img/favicon.jpg" class="img-fluid" alt="">
+                        <img src="img/team-2022/Talia Yawney 1.jpg" class="img-fluid"
+                        onmouseover="this.src='img/team-2022/Talia Yawney 2.jpg';"
+                        onmouseout="this.src='img/team-2022/Talia Yawney 1.jpg';">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Talia Yawney</h4>
@@ -707,9 +709,9 @@
 
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#abeerf">
-                        <img src="img/team-2021/Abeer Fatima 1.jpg" class="img-fluid"
-                        onmouseover="this.src='img/team-2021/Abeer Fatima 2.jpg';"
-                        onmouseout="this.src='img/team-2021/Abeer Fatima 1.jpg';">
+                        <img src="img/team-2022/Abeer Fatima 1.jpg" class="img-fluid"
+                        onmouseover="this.src='img/team-2022/Abeer Fatima 2.jpg';"
+                        onmouseout="this.src='img/team-2022/Abeer Fatima 1.jpg';">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Abeer Fatima</h4>
@@ -1292,7 +1294,7 @@
         </div>
     </div>  -->
 
-    <!-- <div class="modal fade" id="abeerf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="abeerf" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
             <div class="modal-content">
@@ -1304,11 +1306,9 @@
 
                 <div class="modal-body text-center">
                     <h1>Abeer Fatima</h1>
-                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/abeer-fatima-/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <p>Hi there! I'm Abeer, an Electrical Engineering major passionate about universal exploration. When I’m not too occupied being an aspiring scientist, I like to delve into all sorts of books, watch political documentaries, and visit new cafés and the seaside. What consistently drives me is the need to think above and beyond the status quo - scientifically and socially.
-                        As WISE National Conference Co-Chair, I am excited to lead initiatives that empower women in especially male-dominated STEM fields to lead at the forefront of scientific innovation. It is my strong belief that diversity in STEM not only has the power to improve the lives of those marginalised worldwide, but furthermore, to advance humanity’s progression for eons to come.</p>
+                    <a href="mailto:hs.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/abeer-fatima-" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hi there! I'm Abeer, an Electrical and Computer Engineering with a focus in AI, Communications, and Optics. When I'm not indulged in academics, you can find me reading books (mostly social commentary), exploring nature, and pondering the universe. This year, I am excited for in-person WISE events that have the potential to connect people from a diverse array of fields within STEM.</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -1316,7 +1316,7 @@
 
             </div>
         </div>
-    </div>  -->
+    </div> 
 
     <!-- <div class="modal fade" id="christinaw" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
@@ -1517,7 +1517,7 @@
                 <div class="modal-body text-center">
                     <h1>Maria Vetrici</h1>
                     <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/ida-marchese-560715175/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/mariavetrici/" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <p>Hi! My name is Maria, and I'm a graphic designer. I love graphic design (obviously), biking, watching movies, coding, and working out! I'm also passionate about urban planning and sustainability, and I'm currently pursuing Civil Engineering to that end. I'm looking forward to continuing to design Instagram posts and posters! I am also excited to continue to support the place of women and of those who consider themselves nonbinary/gender non-conforming in STEM. I think it's really important to continue to push for inclusion and reduce the persistent discrimination that continues to quietly push people out of careers they are intended for.</p>           
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
@@ -1954,6 +1954,30 @@
                     <p>Hi, I am Mehak Afzal and I am in my 2nd Year Mechanical Engineering. I am a fun loving social person who loves to explore new places and try various cuisines. I also obviously enjoy netflix n chill with takeout Chinese or fried chicken, as well as working out, cycling and love to engage in deep philosophical conversations. Through WISE I am most excited to meet successful women from various backgrounds and get inspired by their journey to being a women in STEM! <br>
                         Fun fact: I am the first person in my family to pursue a career in STEM!
                     </p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div> 
+
+    <div class="modal fade" id="taliay" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Talia Yawney</h1>
+                    <a href="mailto:outreach.events@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://ca.linkedin.com/in/talia-yawney" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hello! My name is Talia and I am a Chem 2T5 + PEY. When I am not studying, you’ll find me hiking outdoors, attending indie concerts or rock climbing at a nearby gym. I am so excited to run engaging events for young women in our community and help foster an interest in STEM for their future careers!</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
