--- a/our-team.html
+++ b/our-team.html
@@ -363,9 +363,9 @@
 
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#aubreyu">
-                        <img src="img/team/Aubrey U 1.jpeg" class="img-fluid"
-                        onmouseover="this.src='img/team/Aubrey U 2.jpeg';"
-                        onmouseout="this.src='img/team/Aubrey U 1.jpeg';">
+                        <img src="img/team-2022/Aubrey Uy 1.jpeg" class="img-fluid"
+                        onmouseover="this.src='img/team-2022/Aubrey Uy 2.jpeg';"
+                        onmouseout="this.src='img/team-2022/Aubrey Uy 1.jpeg';">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Aubrey Uy</h4>
@@ -1978,6 +1978,30 @@
                     <a href="mailto:outreach.events@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="https://ca.linkedin.com/in/talia-yawney" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <p>Hello! My name is Talia and I am a Chem 2T5 + PEY. When I am not studying, you’ll find me hiking outdoors, attending indie concerts or rock climbing at a nearby gym. I am so excited to run engaging events for young women in our community and help foster an interest in STEM for their future careers!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div> 
+
+    <div class="modal fade" id="aubreyu" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Aubrey Uy</h1>
+                    <a href="mailto:editor@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/akuy/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hi! I’m Aubrey (she/her), a first year Bloomberg Nursing student. I’m also a UofT alumni! Super excited to be back on WISE to further advocate for more diversity in STEM and inspire leaners interested in the field! In my free time, I love to read and hike (need to build up the stamina for long clinical hours).</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
