subpages team updates + outreach ambass updates

--- a/community-outreach.html
+++ b/community-outreach.html
@@ -123,17 +123,17 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2021/Rubaina Farin 1.jpg" class="img-fluid"
-                                onmouseover="this.src='img/team-2021/Rubaina Farin 2.jpg';"
-                                onmouseout="this.src='img/team-2021/Rubaina Farin 1.jpg';">
+                                <img src="img/team-2022/Nasoe Talash 1.jpg" class="img-fluid"
+                                onmouseover="this.src='img/team-2022/Nasoe Talash 2.jpg';"
+                                onmouseout="this.src='img/team-2022/Nasoe Talash 1.jpg';">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Rubaina Farin</h4>
+                                        <h4>Nasoe Talash</h4>
                                         <span>High School Outreach Director</span>
-                                        <h5>Life Sciences</h5>
+                                        <h5>Industrial Engineering</h5>
                                         <div class="social">
                                             <a href="mailto:hs.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/rubaina-farin-b193581b2/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/nasoe-talash" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
