--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -114,8 +114,8 @@
                 </div>
 
                 <div style= "margin: 0 space auto; text-align: center;padding-top: 60px;" >
-                    <a href = "https://docs.google.com/forms/d/e/1FAIpQLScSxLxZk3M8kqCR3XZovrjiE6YSTifz-ddyFi6rTfAJVdcQ9Q/viewform" id="apply-btn" style = "margin-bottom: 28px;">
-                    Apply to become an Outreach Ambassador for the 2021-2022 year!
+                    <a href = "https://docs.google.com/forms/d/e/1FAIpQLSfqWrHJcBT8HYXQJM1i89g_v7viPAJD0LN2zylT0G27fbeV3Q/viewform" id="apply-btn" style = "margin-bottom: 28px;">
+                    Apply to become an Outreach Ambassador for the 2022-2023 year!
                     </a>
                 </div>
 
@@ -154,17 +154,17 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2021/Dhana Abdo 2.jpg" class="img-fluid"
-                                onmouseover="this.src='img/team-2021/Dhana Abdo 1.jpg';"
-                                onmouseout="this.src='img/team-2021/Dhana Abdo 2.jpg';">
+                                <img src="img/team-2022/Abeer Fatima 1.jpg" class="img-fluid"
+                                onmouseover="this.src='img/team-2022/Abeer Fatima 2.jpg';"
+                                onmouseout="this.src='img/team-2022/Abeer Fatima 1.jpg';">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Dhana Abdo</h4>
+                                        <h4>Abeer Fatima</h4>
                                         <span>High School Mentorship Director</span>
-                                        <h5>Engineering Science</h5>
+                                        <h5>Electrical Engineering</h5>
                                         <div class="social">
                                             <a href="mailto:hs.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/dhana-abdo/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/abeer-fatima-" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
