--- a/industry-mentorship.html
+++ b/industry-mentorship.html
@@ -142,17 +142,15 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team/Asma Surti 1.jpeg" class="img-fluid"
-                                onmouseover="this.src='img/team/Asma Surti 2.jpeg';"
-                                onmouseout="this.src='img/team/Asma Surti 1.jpeg';">
+                                <img src="img/favicon.jpg" class="img-fluid" alt="">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Asma Surti</h4>
+                                        <h4>Jasmine Wu</h4>
                                         <span>Industry Mentorship Director</span>
-                                        <h5>Computer Engineering</h5>
+                                        <h5>Engineering Science</h5>
                                         <div class="social">
                                             <a href="mailto:industry.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/asma-surti/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/jasminewu3" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -161,17 +159,15 @@
         
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2021/Sabrina Zhu 1.jpg" class="img-fluid"
-                                onmouseover="this.src='img/team-2021/Sabrina Zhu 2.jpg';"
-                                onmouseout="this.src='img/team-2021/Sabrina Zhu 1.jpg';">
+                                <img src="img/team-2022/Esther Zhou.jpg" class="img-fluid" alt="">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Sabrina Zhu</h4>
+                                        <h4>Esther Zhou</h4>
                                         <span>Industry Mentorship Director</span>
-                                        <h5>Laboratory Medicine and Pathobiology</h5>
+                                        <h5>Engineering Science</h5>
                                         <div class="social">
                                             <a href="mailto:industry.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="www.linkedin.com/in/sabrinazhu21" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/esther-zhou " target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
