--- a/events.html
+++ b/events.html
@@ -107,15 +107,15 @@
                     <!-- <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s"> -->
                         <div class="card">
                             <div class="card-header">
-                                <h3>WISE HS Outreach Ambassador 2021-2022 Recruitment</h3>
+                                <h3>WISE HS Outreach Ambassador 2022-2023 Recruitment</h3>
                             </div>
                             <div class="card-block" >
-                                <h4 class="card-title">Deadline: TBD</h4>
+                                <h4 class="card-title">Deadline: September 30th, 2022</h4>
                                 <!-- <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach" style="width:60%; border-radius: 8px; margin-top: 25px; margin-bottom: 25px"> -->
-                                <p style="margin-left: 80px; margin-right: 80px;">Women in Science and Engineering is recruiting for HS Outreach Ambassadors for the 2021-2022 year! 
+                                <p style="margin-left: 80px; margin-right: 80px;">Women in Science and Engineering is recruiting for HS Outreach Ambassadors for the 2022-2023 year! 
                                     The primary role of the Outreach Ambassador is to visit high schools across the GTA to present and promote post-secondary opportunities in STEM (Science, Technology, Engineering, Mathematics) fields through a presentation and Q&A. You will also have the opportunity to gain authorship in educational material that reaches our audience of more than a thousand students per year. Our overall goal is to encourage high school students to pursue STEM careers by reaching out to different groups in the community.
                                 </p>
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScSxLxZk3M8kqCR3XZovrjiE6YSTifz-ddyFi6rTfAJVdcQ9Q/viewform" target="_blank" class="btn-current">Apply to become an Outreach Ambassador for the 2021-2022 year!</a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfqWrHJcBT8HYXQJM1i89g_v7viPAJD0LN2zylT0G27fbeV3Q/viewform" target="_blank" class="btn-current">Apply to become an Outreach Ambassador for the 2022-2023 year!</a>
                             </div>
                         </div>
                     <!-- </div> -->
