anne linkedin change

--- a/our-team.html
+++ b/our-team.html
@@ -704,7 +704,7 @@
                                 <h5>Math, Cognitive Science, Psychology</h5>
                                 <div class="social">
                                     <a href="mailto:outreach.events@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                    <a href="www.linkedin.com/in/annehuynh-/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/annehuynh1/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -1861,7 +1861,7 @@
                 <div class="modal-body text-center">
                     <h1>Anne Huynh</h1>
                     <a href="mailto:outreach.events@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <a href="www.linkedin.com/in/annehuynh-/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/annehuynh1/" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <p>Hello! I’m currently in my third year, majoring in Cognitive Science and double minoring in Math and Psychology. When I’m not studying, I enjoy reading, baking and listening to Taylor Swift. I’m super excited to work with people who are as passionate about empowering women in STEM as I am to organize events, especially with a hopeful return to in person programming!</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
