--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -142,7 +142,7 @@
                     <a href = "https://forms.gle/6z96gapsPKamf5aM9" id="apply-btn" style = "margin-bottom: 28px;">
 		             Apply to become a Mentor!
                     </a>
-                    <a href = "https://docs.google.com/forms/d/e/1FAIpQLScXOxNL4_MsKoe2evjIlqDuRuSSaKpIFpMwJBVkXbTLA4zIIg/viewform" id="apply-btn" style = "margin-bottom: 28px; margin-left: 30px">
+                    <a href = "https://forms.gle/9MThnNTxXW7fukNy6" id="apply-btn" style = "margin-bottom: 28px; margin-left: 30px">
                         Apply to become a Mentee!
                        </a>
                 </div>
